# Contracting-Intelligence-Opersting-System

./: .env.example  .gitignore  .trivyignore  CLAUDE.md  TRANSITION.md  package-lock.json  package.json  turbo.json  vercel.json
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_complete_schema.py  003_jurisdiction_type.py  004_pir_schema.py  005_winning_profile_schema.py  006_wph_shaping_risk.py  007_force_rls.py  008_wph_vehicle_contestability.py
apps/api/cios/: __init__.py  config.py  main.py
apps/api/cios/agents/: __init__.py  award_simulator_agent.py  base.py  ceo_agent.py  pir_analyst_agent.py  winning_profile_agent.py
apps/api/cios/agents/directors/: __init__.py  capture_director.py  competitive_intel_director.py  compliance_director.py  pricing_director.py  risk_director.py
apps/api/cios/api/v1/: router.py
apps/api/cios/api/v1/endpoints/: admin.py  agent_runs.py  auth.py  award_simulations.py  bid_decisions.py  capabilities.py  competitors.py  knowledge_vault.py  onboarding.py  opportunities.py  past_performance.py  pir.py  (+5 more)
apps/api/cios/core/: database.py  dependencies.py  rate_limit.py  redis.py  security.py  telemetry.py
apps/api/cios/models/: __init__.py  agent_run.py  award_simulation.py  base.py  bid_decision.py  capability.py  competitor.py  knowledge_vault.py  opportunity.py  past_performance.py  pir.py  subscription.py  teaming.py  tenant.py  winning_profile.py
apps/api/cios/procurement_rules/: __init__.py  registry.py
apps/api/cios/scanners/: __init__.py  base.py  jobs.py  samgov.py  usaspending.py
apps/api/cios/scoring/: __init__.py  signal_scorer.py
apps/api/cios/tasks/: __init__.py  analysis.py  bid_analysis.py  billing.py  competitive_intel.py  email.py  gap_analysis.py  ingestion.py  onboarding.py  pir.py  scoring.py  simulation.py  teaming.py  winning_profile.py
apps/api/cios/vector/: __init__.py  tenant_store.py
apps/api/cios/wph/: __init__.py  alignment.py  constants.py  engine.py  extraction.py  inference.py  pdq.py  sample_data.py  schemas.py  service.py  taxonomy.py
apps/api/tests/integration/: test_api_health.py  test_tenant_isolation.py
apps/api/tests/unit/: test_procurement_rules.py  test_rate_limit.py  test_security.py  test_winning_profile_engine.py
(+111 files in other folders)
