[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cios-api"
version = "1.0.0"
description = "CIOS Backend API - Contract Intelligence Operating System"
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
Repository = "https://github.com/7858lc/contracting-intelligence-opersting-system"
"Bug Tracker" = "https://github.com/7858lc/contracting-intelligence-opersting-system/issues"

dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",

    # Caching & Queuing
    "redis[hiredis]>=5.0.0",
    "celery[redis]>=5.4.0",

    # Vector Database
    "qdrant-client>=1.11.0",

    # AI
    "anthropic>=0.36.0",
    "voyageai>=0.3.0",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=43.0.0",
    "python-multipart>=0.0.9",

    # HTTP
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",

    # Storage
    "aiobotocore>=2.13.0",
    "boto3>=1.35.0",

    # Data processing
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "pypdf>=4.3.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "tiktoken>=0.7.0",

    # Observability
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.14.0",

    # Utilities
    "python-slugify>=8.0.0",
    "tenacity>=9.0.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "ulid-py>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
